<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowActivity"
    android:id="@+id/draw">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/frag"
            android:background="@color/bai"></FrameLayout>
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/zhuye"
                style="@style/tab_style"
                android:drawableTop="@drawable/ma_buone"
                android:text="@string/app_zy" />
            <RadioButton
                android:id="@+id/ganhuo"
                style="@style/tab_style"
                android:drawableTop="@drawable/ma_butwo"
                android:text="@string/app_gh" />

            <RadioButton
                android:id="@+id/yingshi"
                style="@style/tab_style"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/am_three"
                android:text="@string/app_ys" />

            <RadioButton
                android:id="@+id/shuji"
                style="@style/tab_style"
                android:drawableTop="@drawable/am_four"
                android:text="@string/app_sj" />

            <RadioButton
                android:id="@+id/wode"
                style="@style/tab_style"
                android:drawableTop="@drawable/am_five"
                android:text="@string/app_gr" />
        </RadioGroup>


    </LinearLayout>
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:id="@+id/linnn"
        android:orientation="vertical"
        android:layout_gravity="start">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@mipmap/a"/>

    </LinearLayout>


</android.support.v4.widget.DrawerLayout>